Updated the OpenAPI docs
